<resources>
    <string name="app_name">DashCam+</string>
    <string name="action_settings">Ustawienia</string>
    <string name="title_activity_settings">Ustawienia</string>


    <!-- Strings related to Speedometer -->

    <string name="initial_speed">0.0 m/s</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Główne ustawienia</string>

    <string name="settings_komunikaty_dzwiekowe">Komunikaty dzwiękowe</string>
    <string name="settings_komunikaty_dzwiekowe_opis_znaki">Podczas wykrycia znaków specjalnych</string>
    <string name="settings_komunikaty_dzwiekowe_opis_auta_naprzeciwko">Podczas zbyt bliskiej odległości auta naprzeciwko</string>
    <string name="settings_komunikaty_dzwiekowe_opis_przekroczona_predkosc">Podczas przekroczenia prędkości</string>
    <string name="settings_jaka_dlugosc_nagran">Długość nagrań (w sekundach):</string>
    <string name="settings_podana_dlugosc_nagran">120</string>
    <string name="settings_jak_dlugo_nagrywac">Długość nagrań:</string>
    <string name="settings_czy_pokazywac_predkosc_na_nagraniu">Czy pokazywać prędkość na nagraniu:</string>
    <string-array name="settings_list_dlugosc_nagran">
        <item>30 sekund</item>
        <item>60 sekund</item>
        <item>90 sekund</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="settings_lista_czy_pokazywac_predkosc">
        <item>Tak</item>
        <item>Nie</item>
    </string-array>
    <string-array name="settings_lista_czy_pokazywac_predkosc_values">
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Stringi do Camery -->
    <string name="video_button">Video Record Button</string>
    <string name="camera_button">Camera Capture Button</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
