<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/settings_komunikaty_dzwiekowe_opis_znaki"
        android:title="@string/settings_komunikaty_dzwiekowe" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/settings_komunikaty_dzwiekowe_opis_przekroczona_predkosc"
        android:title="@string/settings_komunikaty_dzwiekowe" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/settings_komunikaty_dzwiekowe_opis_auta_naprzeciwko"
        android:title="@string/settings_komunikaty_dzwiekowe" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/settings_podana_dlugosc_nagran"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/settings_jaka_dlugosc_nagran" />
    -->
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/settings_list_dlugosc_nagran"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list_dlugosc_nagran"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/settings_jak_dlugo_nagrywac" />
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/settings_lista_czy_pokazywac_predkosc"
        android:entryValues="@array/settings_lista_czy_pokazywac_predkosc_values"
        android:key="example_list_czy_pokazywac_predkosc"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/settings_czy_pokazywac_predkosc_na_nagraniu" />

</PreferenceScreen>
